Major updates. Twitter working

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,7 +14,7 @@
 @import "_video";
 
 /* Styles for clips carousel */
-@import "_clips";
+@import "_tweets";
 
 /* Styles for ugc carousel */
 @import "_ugc";
