--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,6 +19,7 @@ html
 
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
 		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js")
+		script(src="https://cdn.socket.io/socket.io-1.2.0.js")
 		script(type="text/javascript").
 			var settings= !{JSON.stringify(settings)};
 		script(src=settings.home + "js/app.min.js")
