--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -6,3 +6,16 @@ html, body{
 .container{
 	width: 95%;
 }
+
+#banner{
+	background-image: url("/img/banner.jpg");
+	background-size: cover;
+	height: 350px;
+	background-position: 0 -10em;
+	background-repeat: no-repeat;
+
+	@include respond-to(handhelds){
+		background-position: 0 0;
+		height: 250px;
+	}
+}
