--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,22 @@ html, body {
   width: 95%;
 }
 
+/* line 10, ../../assets/scss/_page.scss */
+#banner {
+  background-image: url("/img/banner.jpg");
+  background-size: cover;
+  height: 350px;
+  background-position: 0 -10em;
+  background-repeat: no-repeat;
+}
+@media only screen and (max-width: 479px) {
+  /* line 10, ../../assets/scss/_page.scss */
+  #banner {
+    background-position: 0 0;
+    height: 250px;
+  }
+}
+
 /* Pull in video styles */
 /* line 1, ../../assets/scss/_video.scss */
 .video {
@@ -42,11 +58,26 @@ html, body {
 /* Styles for ugc carousel */
 /* line 1, ../../assets/scss/_ugc.scss */
 #ugc {
-  margin-top: 1em;
+  text-align: center;
 }
-/* line 5, ../../assets/scss/_ugc.scss */
-#ugc #carousel div {
-  max-width: 20% !important;
-  float: left;
-  margin-right: 1%;
+/* line 4, ../../assets/scss/_ugc.scss */
+#ugc .insta {
+  background: #FFF;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  margin-bottom: 1em;
+  margin-right: 1em;
+  display: inline-block;
+  text-align: left;
+}
+/* line 15, ../../assets/scss/_ugc.scss */
+#ugc .insta .caption {
+  height: 120px;
+  overflow: hidden;
+}
+/* line 20, ../../assets/scss/_ugc.scss */
+#ugc .insta .user {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
