Updates mobile styles and JS to handle stupid hashtag strings

--- a/assets/scss/_tweets.scss
+++ b/assets/scss/_tweets.scss
@@ -1,6 +1,12 @@
 #tweets{
 	background-color: #FFF;
 	overflow: hidden;
+
+	@include respond-to(handhelds){
+		@include border-radius(10px);
+
+		margin-bottom: 1em;
+	}
 	
 	#tweetContent{
 		.row{
