--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ block content
 
 			<div class="row">
 				<div class="col-md-12 caption">
-					<p> <%= item.caption.text %>
+					<p> <%= jdrive.breakHash(item.caption.text) %>
 				</div>
 			</div>
 		</div>
