--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -1,19 +1,25 @@
 html, body{
 	font-size: 16px;
 	background-color: #000;
+        padding:0;
+        margin:0;
 }
-
+h1 {padding:0;margin:0;color:#FFF;text-transform:uppercase;}
+img {border:none;}
 .container{
 	width: 95%;
 }
-
 #banner{
-	background-image: url("/img/banner.jpg");
-	background-size: cover;
-	height: 350px;
-	background-position: 0 -10em;
+	/*background-image: url("/img/banner.jpg");
+        background-position: 0 -10em;
 	background-repeat: no-repeat;
-
+        background-size: cover;
+        height: 350px;
+        */
+        border-top:4px solid #d11621;
+        background:#000;
+        padding:12px;
+        margin:0;
 	@include respond-to(handhelds){
 		background-position: 0 0;
 		height: 250px;
