--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -5,7 +5,7 @@ html, body{
         margin:0;
 }
 h1 {padding:0;margin:0;color:#FFF;text-transform:uppercase;}
-img {border:none;}
+img {border:none;max-width:580px;}
 .container{
 	width: 95%;
 }
@@ -22,6 +22,8 @@ img {border:none;}
         margin:0;
 	@include respond-to(handhelds){
 		background-position: 0 0;
-		height: 250px;
 	}
+        @media (max-width:590px) {
+            img {width:100%;}
+        }
 }
