--- a/assets/scss/_tweets.scss
+++ b/assets/scss/_tweets.scss
@@ -6,12 +6,13 @@
         .twitter-share-button {position:absolute;z-index:2000;top:16px;right:0px;display:inline-block;}
         h3 {background:#000;border-bottom:4px solid #d31823;color:#FFF;margin:0 -15px;padding:12px;color:#FFF}
 	@include respond-to(handhelds){
-		@include border-radius(10px);
-
 		margin-bottom: 1em;
 	}
 	
 	#tweetContent{
+            height:89%;
+            overflow-y:auto;
+            overflow-x:hidden;
             a {color:#d31823;}
 		.row{
 			height: 90%;
