--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,3 +23,12 @@ html
 		script(type="text/javascript").
 			var settings= !{JSON.stringify(settings)};
 		script(src=settings.home + "js/app.min.js")
+		script.
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', '#{settings.analytics.ga.id}', 'auto');
+			ga('send', 'pageview');
+		
