Adds description text

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		meta(name="og:image", content="/img/banner.jpg")
+		meta(name="description", content="Watch Stony Brook University's Roth Regatta live on May 1st @ noon! Live interviews with special guests, play-by-play race coverage and a behind the scenes look at the work that went into this year's boats, all brought to you by the School Journalism.")
 		title= title
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css")
 		link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
