--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,9 @@ block content
 				img(src= "/img/roth-regatta-live-header.jpg", alt="Roth Regatta Live")
 		
 	div.container
-
+		div.row
+			p#description.col-md-9.col-md-12 Watch Stony Brook University's Roth Regatta live on May 1st @ noon! Live interviews with special guests, play-by-play race coverage and a behind the scenes look at the work that went into this year's boats, all brought to you by the School of Journalism.
+		
 		div.row
 			div#mainVideo.col-lg-9.col-md-12
 				iframe.video(src="http://www.ustream.tv/embed/" + settings.ustream.videoid + "?v=3&amp;wmode=direct&autoplay=true")
