--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -1,29 +1,42 @@
-html, body{
+html, body {
 	font-size: 16px;
 	background-color: #000;
+    padding:0;
+    margin:0;
+
+    h1 {
         padding:0;
         margin:0;
-}
-h1 {padding:0;margin:0;color:#FFF;text-transform:uppercase;}
-img {border:none;max-width:580px;}
-.container{
-	width: 95%;
-}
-#banner{
-	/*background-image: url("/img/banner.jpg");
-        background-position: 0 -10em;
-	background-repeat: no-repeat;
-        background-size: cover;
-        height: 350px;
-        */
+        color:#FFF;
+        text-transform:uppercase;
+    }
+
+    img {
+        border:none;max-width:580px;
+    }
+
+    .container{
+        width: 95%;
+    }
+
+    #banner{
         border-top:4px solid #d11621;
         background:#000;
         padding:12px;
         margin:0;
-	@include respond-to(handhelds){
-		background-position: 0 0;
-	}
-        @media (max-width:590px) {
-            img {width:100%;}
+
+        @include respond-to(handhelds){
+            background-position: 0 0;
         }
+
+        @media (max-width:590px) {
+            img {
+                width:100%;
+            }
+        }
+    }
+
+    p#description{
+        color: #FFF;
+    }
 }
