--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
 		
 	div.container
 		div.row
-			p#description.col-md-9.col-md-12 Watch Stony Brook University's Roth Regatta live on May 1st @ noon! Live interviews with special guests, play-by-play race coverage and a behind the scenes look at the work that went into this year's boats, all brought to you by the School of Journalism.
+			p#description.col-md-9.col-md-12 Watch Stony Brook University's Roth Regatta live on May 1st @ noon! Interviews with special guests, play-by-play race coverage and a behind the scenes look at this year's boats, all brought to you by the School Journalism.
 		
 		div.row
 			div#mainVideo.col-lg-9.col-md-12
