Fixes style on tweet header and corrects invalid RegEX

--- a/assets/scss/_tweets.scss
+++ b/assets/scss/_tweets.scss
@@ -19,7 +19,8 @@
     	color:#FFF;
     	margin:0 -15px;
     	padding:12px;
-    	color:#FFF
+    	color:#FFF;
+        font-size: 1.2em;
     }
 	
 	@include respond-to(handhelds){
