Updates twitter text

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
 				iframe.video(src="http://www.ustream.tv/embed/" + settings.ustream.videoid + "?v=3&amp;wmode=direct&autoplay=true")
 			div#tweets.col-lg-3.col-md-12
 				h3 <i class="fa fa-twitter"></i> #{hashtag}
-				a.twitter-share-button(href="https://twitter.com/share", data-text="I'm watching @SBUjournalism's live broadcast of the #RothRegatta. #RRL2015") Tweet
+				a.twitter-share-button(href="https://twitter.com/share", data-text="I'm watching @SBUjournalism's #RothRegattaLive! #RothRegatta") Tweet
 				div#tweetContent
 
 		div#ugc.row
