Completes frontend modifications to work with configurations feed from WP

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,15 @@ html
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
-		meta(name="og:image", content="/img/banner.jpg")
-		meta(name="description", content=settings.descriptionText)
-		title= title
+		meta(name="og:image", content=content["_yoast_wpseo_opengraph-image"])
+		meta(name="og:description", content=content["_yoast_wpseo_opengraph-description"])
+		meta(name="og:title", content=content["_yoast_wpseo_opengraph-title"])
+		meta(name="description", content=content["_yoast_wpseo_metadesc"])
+		meta(name="twitter:title", content=content["_yoast_wpseo_twitter-title"])
+		meta(name="twitter:description", content=content["_yoast_wpseo_twitter-description"])
+		meta(name="twitter:image", content=content["_yoast_wpseo_twitter-image"])
+
+		title=content.post_title
 		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css")
 		link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
 		link(rel='stylesheet', href=settings.home + 'css/style.min.css')
