--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,11 @@ block content
 		
 		div.row
 			div#mainVideo.col-lg-9.col-md-12
-				iframe.video(src="http://www.ustream.tv/embed/" + content.ustream + "?v=3&amp;wmode=direct&autoplay=true")
+				if parseInt(content.video_type) === 0
+					iframe.video(src="http://www.ustream.tv/embed/" + content.ustream + "?v=3&amp;wmode=direct&autoplay=true")
+				else if parseInt(content.video_type) === 1
+					iframe.video(src="https://player.vimeo.com/video/" + content.vimeo + "?autoplay=1")
+
 			div#tweets.col-lg-3.col-md-12
 				h3 <i class="fa fa-twitter"></i> #{content.twitter_hashtag}
 				a.twitter-share-button(href="https://twitter.com/share", data-text=content.tweet_text) Tweet
