API configuration complete

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
 			h1
 				img(src= "/img/roth-regatta-live-header.jpg", alt="Roth Regatta Live")
 		
-	div.container
+	div.container(data-slug=slug)
 		div.row
 			p#description.col-md-9.col-md-12 #{content.post_content}
 		
