Allows logo upload

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
 	div#banner.row
 			h1
-				img(src= "/img/roth-regatta-live-header.jpg", alt="Roth Regatta Live")
+				img(src=content.logo, alt="Roth Regatta Live")
 		
 	div.container(data-slug=slug)
 		div.row
