Updates logo stuff

--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -12,7 +12,9 @@ html, body {
     }
 
     img {
-        border:none;max-width:580px;
+        border:none;
+        max-width:580px;
+        max-height: 99px;
     }
 
     .container{
