--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,13 +21,16 @@ html h1, body h1 {
 html img, body img {
   border: none;
   max-width: 580px;
+}
+/* line 18, ../../assets/scss/_page.scss */
+html img.logo, body img.logo {
   max-height: 99px;
 }
-/* line 20, ../../assets/scss/_page.scss */
+/* line 23, ../../assets/scss/_page.scss */
 html .container, body .container {
   width: 95%;
 }
-/* line 24, ../../assets/scss/_page.scss */
+/* line 27, ../../assets/scss/_page.scss */
 html #banner, body #banner {
   border-top: 4px solid #d11621;
   background: #000;
@@ -35,18 +38,18 @@ html #banner, body #banner {
   margin: 0;
 }
 @media only screen and (max-width: 479px) {
-  /* line 24, ../../assets/scss/_page.scss */
+  /* line 27, ../../assets/scss/_page.scss */
   html #banner, body #banner {
     background-position: 0 0;
   }
 }
 @media (max-width: 590px) {
-  /* line 35, ../../assets/scss/_page.scss */
+  /* line 38, ../../assets/scss/_page.scss */
   html #banner img, body #banner img {
     width: 100%;
   }
 }
-/* line 41, ../../assets/scss/_page.scss */
+/* line 44, ../../assets/scss/_page.scss */
 html p#description, body p#description {
   color: #FFF;
 }
