--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
 	div#banner.row
 			h1
-				img(src=content.logo, alt="Roth Regatta Live")
+				img.logo(src=content.logo, alt=content.post_title)
 		
 	div.container(data-slug=slug)
 		div.row
